fixed scroll width and z-indexing on landing page

--- a/Resources/CSS/main-layout/fonts.css
+++ b/Resources/CSS/main-layout/fonts.css
@@ -1,12 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;700;900&family=Titillium+Web:wght@200;300;400;700&display=swap");
+/* ----------------------------------- Global Fonts ----------------------------- */
 
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;700;900&family=Titillium+Web:wght@200;300;400;700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;700;900&family=Titillium+Web:wght@200;300;400;700&display=swap");
+
+/* ---------------------------------- Global Variables -------------------------- */
 :root {
 	--media-query--font-margin-left: 4em;
 	--media-query--font-margin-right: 6em;
-	--media-query--font-size: 22px;
+	--media-query--font-size: 28px;
 }
+
+/* ----------------- Global tiny highlight to increase legibility --------------- */
 * {
 	color: #0e0e0d;
 	text-shadow: 0px 2px 10px rgba(231, 226, 226, 0.527);
@@ -14,23 +19,24 @@
 	line-height: 1.85em;
 }
 
+/* -------------------------- Responsive Design --------------------------------- */
 @media (max-width: 920px) {
 	:root {
 		--media-query--font-margin-left: 8em;
 		--media-query--font-margin-right: 2.5em;
-		--media-query--font-size: 18px;
+		--media-query--font-size: 28px;
 	}
 }
 @media (min-width: 651px) {
 	:root {
 		--media-query--font-margin-right: 3.85em;
-		--media-query--font-size: 16px;
+		--media-query--font-size: 26px;
 	}
 }
 @media (min-width: 650px) {
 	:root {
 		--media-query--font-margin-right: 5.5em;
-		--media-query--font-size: 16px;
+		--media-query--font-size: 26px;
 	}
 }
 
@@ -41,6 +47,8 @@
 		--media-query--font-margin-right: 2em;
 	}
 }
+
+/* --------------------------- Sizing etc ---------------------------------------- */
 h1,
 h2,
 .title,
@@ -63,8 +71,6 @@ p {
 }
 .p-strong {
 	/* font-size: 12px; */
-	font-family: "Outfit", sans-serif;
-	font-weight: 900;
 	margin-top: 0.2em;
 	padding: 2px;
 	padding-bottom: 2em;
@@ -82,6 +88,4 @@ h1 {
 
 h2 {
 	font-size: calc(0.01em + var(--media-query--font-size));
-	/* font-size: 1.05em; */
-	/* font-size: 1.5em; */
 }
